--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.0",
+    "firebase": "^4.13.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -12,6 +13,7 @@
     "reactstrap": "^5.0.0",
     "redux": "^4.0.0",
     "redux-api-middleware": "^2.3.0",
+    "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-thunk": "^2.2.0"
   },
